<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="42dp">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="414dp"
            android:layout_height="250dp"
            android:contentDescription="@string/imagedescription"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/omagua" />


        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/imageView6"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/ciudad_poi"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textView14"
            android:layout_alignRight="@+id/textView14"
            android:layout_alignBottom="@id/imageView6"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="-41dp"
            android:layout_marginRight="-41dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/logo_ubicacion"
            app:srcCompat="@android:drawable/ic_dialog_map" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView6"
            android:text="@string/namePOISelected"
            android:textColor="#5C5959"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView11"
            android:layout_marginTop="10dp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:text="@string/descriptionPOISelected"
            android:textColor="#5C5959"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView12"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/image_email"
            app:srcCompat="@android:drawable/ic_dialog_email" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView12"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="11dp"
            android:layout_toEndOf="@+id/imageView8"
            android:layout_toRightOf="@+id/imageView8"
            android:text="@string/email"
            android:textSize="18sp" />


        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView8"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/image_email"
            app:srcCompat="@android:drawable/sym_action_call" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView13"
            android:layout_marginStart="7dp"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/imageView8"
            android:layout_toRightOf="@+id/imageView8"
            android:text="@string/phone"
            android:textSize="18sp" />


        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView9"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/image_email"
            app:srcCompat="@drawable/web2" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView15"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="17dp"
            android:layout_toEndOf="@+id/imageView10"
            android:layout_toRightOf="@+id/imageView10"
            android:text="@string/web_page"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView10"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/image_email"
            app:srcCompat="@drawable/map_maker" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView16"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="17dp"
            android:layout_toEndOf="@+id/imageView11"
            android:layout_toRightOf="@+id/imageView11"
            android:text="@string/address"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView17"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="17dp"
            android:text="@string/activities"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView18"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/desc_activities"
            android:textSize="18sp" />

        <ImageView
        android:id="@+id/imageView12"
        android:layout_width="414dp"
        android:layout_height="60dp"
        android:contentDescription="@string/imagedescription"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
           android:layout_alignParentBottom="true"
        app:srcCompat="@drawable/omagua_2" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>