<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListPoi">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="532dp"
        app:cardBackgroundColor="#684B9E"
        app:cardCornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="207dp"
            tools:layout_editor_absoluteY="193dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_span="2"
                    android:text="@string/poi_1"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteX="59dp"
                    tools:layout_editor_absoluteY="224dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="137dp"
                    android:layout_height="83dp"
                    app:srcCompat="@android:drawable/ic_dialog_map"
                    tools:layout_editor_absoluteX="69dp"
                    tools:layout_editor_absoluteY="279dp"
                    android:contentDescription="@string/img1" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="224dp"
                    android:layout_height="72dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/desc_poi_1"
                    android:textColor="#BFFFFFFF"
                    android:textSize="18sp" />
            </TableRow>
        </TableLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        app:cardBackgroundColor="#684B9E"
        app:cardCornerRadius="12dp"
        app:layout_constraintTop_toBottomOf="@+id/cardView1"
        tools:layout_editor_absoluteX="199dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="207dp"
            tools:layout_editor_absoluteY="193dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_span="2"
                    android:text="@string/poi_2"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="parent"
                    tools:layout_editor_absoluteX="149dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="137dp"
                    android:layout_height="83dp"
                    app:srcCompat="@android:drawable/ic_dialog_map"
                    tools:layout_editor_absoluteX="69dp"
                    tools:layout_editor_absoluteY="279dp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="222dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/desc_poi_2"
                    android:textColor="#BFFFFFFF"
                    android:textSize="18sp" />
            </TableRow>
        </TableLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        app:cardBackgroundColor="#684B9E"
        app:cardCornerRadius="12dp"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        tools:layout_editor_absoluteX="199dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="207dp"
            tools:layout_editor_absoluteY="193dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_span="2"
                    android:text="@string/poi_3"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteX="70dp"
                    tools:layout_editor_absoluteY="395dp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="137dp"
                    android:layout_height="83dp"
                    app:srcCompat="@android:drawable/ic_dialog_map"
                    tools:layout_editor_absoluteX="91dp"
                    tools:layout_editor_absoluteY="435dp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="219dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/desc_poi_3"
                    android:textColor="#BFFFFFFF"
                    android:textSize="18sp"
                    tools:layout_editor_absoluteX="171dp"
                    tools:layout_editor_absoluteY="397dp" />


            </TableRow>
        </TableLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        app:cardBackgroundColor="#684B9E"
        app:cardCornerRadius="12dp"
        app:layout_constraintTop_toBottomOf="@+id/cardView3"
        tools:layout_editor_absoluteX="202dp"
        tools:layout_editor_absoluteY="469dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="207dp"
            tools:layout_editor_absoluteY="193dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_span="2"
                    android:text="@string/poi_4"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="parent" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="137dp"
                    android:layout_height="83dp"
                    app:srcCompat="@android:drawable/ic_dialog_map"
                    tools:layout_editor_absoluteX="69dp"
                    tools:layout_editor_absoluteY="279dp" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="222dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/desc_poi_4"
                    android:textColor="#BFFFFFFF"
                    android:textSize="18sp" />
            </TableRow>
        </TableLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        app:cardBackgroundColor="#684B9E"
        app:cardCornerRadius="12dp"
        app:layout_constraintTop_toBottomOf="@+id/cardView4"
        tools:layout_editor_absoluteX="202dp"
        tools:layout_editor_absoluteY="469dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="207dp"
            tools:layout_editor_absoluteY="193dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_span="2"
                    android:text="@string/poi_5"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="parent" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="137dp"
                    android:layout_height="83dp"
                    app:srcCompat="@android:drawable/ic_dialog_map"
                    tools:layout_editor_absoluteX="69dp"
                    tools:layout_editor_absoluteY="279dp" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="222dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/desc_poi_5"
                    android:textColor="#BFFFFFFF"
                    android:textSize="18sp" />
            </TableRow>
        </TableLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>